kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-demo
  namespace: homework
  labels:
    app: HW-3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: HW-3
  template:
    metadata:
      labels:
        app: HW-3
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: dormitory-volume
          mountPath: /homework
        - name: nginx-volume
          mountPath: /etc/nginx
          readOnly: true
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","rm /homework/index.html"]
      # These containers are run during pod initialization
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      dnsPolicy: Default
      volumes:
      - name: dormitory-volume
        emptyDir: {}
      - name: nginx-volume
        configMap:
          name: nginx-configmap
          items:
          - key: nginx.conf
            path: nginx.conf
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
