kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-internal
  namespace: homework
spec:
  type: ClusterIP
  selector:
    app: HW-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
