kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homework
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-internal
            port:
              number: 80
